# RECSDaemon

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
cmake/: FindCGOS.cmake  FindKEAPI.cmake  FindLibUSB.cmake  FindLog4cxx.cmake  FindSEMA.cmake  linux_arm.toolchain.cmake  linux_i686.toolchain.cmake
cmake/debian/: conffiles  postinst
daemon/: CMakeLists.txt
daemon/conf/: log4cxx.xml  recsdaemon.ini
daemon/rcscripts/: RECSDaemon.init  RECSDaemon.service
daemon/src/: Config.cpp  Config.h  ConfigChangeListener.h  Daemon.cpp  Daemon.h  JSONSensorsParser.cpp  JSONSensorsParser.h  Node.cpp  Node.h  SensorSet.cpp  SensorSet.h  Signature.cpp  Signature.h  StaticJSONSensorProvider.cpp  StaticJSONSensorProvider.h  Thread.cpp  Thread.h  ini_manage.cpp  ini_manage.h  json.cpp  main.cpp  version.h
daemon/src/network/: Network.cpp  Network.h  TelnetServer.cpp  TelnetServer.h
daemon/src/plugin_framework/: Directory.cpp  Directory.h  DynamicLibrary.cpp  IErrorHandler.h  Path.cpp  Path.h  PluginHelper.h  PluginManager.cpp  PluginManager.h
daemon/src/plugin_models/: CommunicatorAdapter.h  CommunicatorFactory.h  JSONSensorProviderAdapter.h  JSONSensorProviderFactory.h  SensorAdapter.h  SensorFactory.h  SensorProviderAdapter.h  SensorProviderFactory.h  SlotDetectorAdapter.h  SlotDetectorFactory.h
daemon/test/: CMakeLists.txt  test.cpp
include/: BaseSensor.h  IConfig.h  SensorBean.h  c_object_model.h  daemon_msgs.h  logger.h  object_model.h  plugin.h
plugins/CommunicatorAdlink/: CMakeLists.txt
plugins/CommunicatorAdlink/src/: Communicator.cpp  Communicator.h  plugin.cpp
plugins/CommunicatorCongatec/: CMakeLists.txt
plugins/CommunicatorCongatec/src/: Communicator.cpp  Communicator.h  plugin.cpp
plugins/CommunicatorDummy/: CMakeLists.txt
plugins/CommunicatorDummy/src/: CommunicatorDummy.cpp  CommunicatorDummy.h  plugin.cpp
plugins/CommunicatorTCP/: CMakeLists.txt
plugins/CommunicatorTCP/src/: CommunicatorTCP.cpp  CommunicatorTCP.h  NetworkClient.cpp  NetworkClient.h  plugin.cpp
plugins/LinuxCommunicatorDev/: CMakeLists.txt
plugins/LinuxCommunicatorDev/src/: Communicator.cpp  Communicator.h  plugin.cpp
plugins/LinuxSensorIP/: CMakeLists.txt
plugins/LinuxSensorIP/src/: LinuxSensorIP.cpp  LinuxSensorIP.h  plugin.cpp
plugins/LinuxSensorProviderEth/: CMakeLists.txt
plugins/LinuxSensorProviderEth/src/: LinuxSensorProviderEth.cpp  LinuxSensorProviderEth.h  plugin.cpp
plugins/LinuxSlotDetectorGPIO/: CMakeLists.txt
plugins/LinuxSlotDetectorGPIO/src/: SlotDetector.cpp  SlotDetector.h  plugin.cpp
plugins/SensorDummy/: CMakeLists.txt
plugins/SensorDummy/src/: DummySensor.cpp  DummySensor.h  plugin.cpp
plugins/SensorFileReader/: CMakeLists.txt
plugins/SensorFileReader/src/: SensorFileReader.cpp  SensorFileReader.h  plugin.cpp
plugins/SensorProviderJetson/: CMakeLists.txt
plugins/SensorProviderJetson/src/: SensorProviderJetson.cpp  SensorProviderJetson.h  plugin.cpp
plugins/SensorProviderSystem/: CMakeLists.txt
plugins/SensorProviderSystem/src/: SensorProviderSystem.cpp  SensorProviderSystem.h  plugin.cpp
plugins/SensorProviderZynq/: CMakeLists.txt
plugins/SensorProviderZynq/src/: SensorProviderZynq.cpp  SensorProviderZynq.h  plugin.cpp
plugins/SensorProviderZynqModule/: CMakeLists.txt
plugins/SensorProviderZynqModule/src/: SensorProviderZynqModule.cpp  SensorProviderZynqModule.h  plugin.cpp
plugins/WindowsCommunicatorI2CTinyUSB/: CMakeLists.txt
plugins/WindowsCommunicatorI2CTinyUSB/src/: Communicator.cpp  Communicator.h  plugin.cpp
